# app/Http/Requests/Recipe/UpdateRequest.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Http\Requests\Recipe;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdateRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'id_type_product' => ['required', 'integer'],
+            'id_raw_material' => ['required', 'integer'],
+            'unit' => ['required', 'string'],
+            'quantity' => ['required', 'integer'],
+            'description' => ['required', 'string'],
+        ];
+    }
+}
