# app/Models/RawMaterial.php
@@ -17,4 +17,8 @@ class RawMaterial extends Model
         return $this->belongsTo(Supplier::class, 'id_supplier', 'id');
     }
 
+    public function recipe(){
+        return $this->hasMany(Recipe::class, 'id', 'id_raw_material');
+    }
+
 }
