# app/Models/Recipe.php
@@ -10,6 +10,14 @@ class Recipe extends Model
     use HasFactory;
 
     protected $fillable = [
-        'id_type_product', 'id_raw_material', 'unit', 'quantity', 'description', 
+        'id_type_product', 'id_raw_material', 'unit', 'quantity', 'description',
     ];
+
+    public function rawmaterial(){
+        return $this->belongsTo(RawMaterial::class, 'id_raw_material', 'id');
+    }
+
+    public function typeproduct(){
+        return $this->belongsTo(TypeProduct::class, 'id_type_product', 'id');
+    }
 }
