# storage/api-docs/api-docs.json
@@ -574,6 +574,172 @@
                 }
             }
         },
+        "/api/recipes": {
+            "get": {
+                "tags": [
+                    "Recipe"
+                ],
+                "summary": "Список",
+                "operationId": "99b2921505aaa0b05aafd140ed9f5f09",
+                "responses": {
+                    "200": {
+                        "description": "Ok"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Recipe"
+                ],
+                "summary": "Создание",
+                "operationId": "663b6533d0b183c33766adc163cdf85a",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id_type_product": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "id_raw_material": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "unit": {
+                                        "type": "string",
+                                        "example": "кг"
+                                    },
+                                    "quantity": {
+                                        "type": "integer",
+                                        "example": 9
+                                    },
+                                    "description": {
+                                        "type": "string",
+                                        "example": "Описание"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Ok"
+                    }
+                }
+            }
+        },
+        "/api/recipes/{recipe}": {
+            "get": {
+                "tags": [
+                    "Recipe"
+                ],
+                "summary": "Список по ID",
+                "operationId": "da0e5a21cf03163b56d6d3c1c46c65dd",
+                "parameters": [
+                    {
+                        "name": "recipe",
+                        "in": "path",
+                        "description": "ID recipe",
+                        "required": true,
+                        "example": 1
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Recipe"
+                ],
+                "summary": "Удаление",
+                "operationId": "3d5c8451379b583594b3f680c70cd602",
+                "parameters": [
+                    {
+                        "name": "recipe",
+                        "in": "path",
+                        "description": "ID recipe",
+                        "required": true,
+                        "example": 1
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "done"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "tags": [
+                    "Recipe"
+                ],
+                "summary": "Обновление",
+                "operationId": "9b8af4b7323f39b3c4a938fac74ecf3e",
+                "parameters": [
+                    {
+                        "name": "recipe",
+                        "in": "path",
+                        "description": "ID recipe",
+                        "required": true,
+                        "example": 2
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id_type_product": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "id_raw_material": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "unit": {
+                                        "type": "string",
+                                        "example": "кг"
+                                    },
+                                    "quantity": {
+                                        "type": "integer",
+                                        "example": 9
+                                    },
+                                    "description": {
+                                        "type": "string",
+                                        "example": "Описание"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Ok"
+                    }
+                }
+            }
+        },
         "/api/sklads": {
             "get": {
                 "tags": [
